Fixed Clickthrough bug
Fixed an old bug that allowed for objects to be clicked behind another object. I.e. the click went through an object and hit the object behind it. This is now resolved for object within the same viewport and objects across multiple viewports.